# yahttp-server

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  main
docs/: Makefile  http.md  sockets.md  style.css
extra/: stress-test.sh
extra/learn/: Makefile  fifo-listener.c  fifo-speaker.c  fork.c  fork1.c  pipe1.c  pipe2.c  sigint.c  sigusr.c
includes/yahttp/: Server.hh
lib/: CMakeLists.txt
src/: CHK.h  CMakeLists.txt  Server.cc  Server.hh  a.out  getip.c  main.c  main.cc  tcp-client.c  tcp-server.c
tests/: CMakeLists.txt  dummy_test.cc
